# risc-v-wb2

./: .svlint.toml  LICENSE  README.md
docs/: memory_map.txt
firmware/: test.c
firmware/as/: assemble.sh  flash.txt  flash_leds.s  test.s  test2.s  test_basic.s  test_dmem.s  test_leds.s  test_systick.s
firmware/cc/: std.mk
firmware/cc/examples/pwm/src/: irq_vec.c  main.c
firmware/cc/scripts/: stats.py
firmware/cc/sys/: boot.S  delay.c  delay.h  device.h  intrin.h  rv32.h  util.h
rtl/artya7/: .gitignore  artya7.xdc  artya7_pll.sv  debouncer.sv  risc-v-wb.xpr  synchronizer.sv  testbench_behav.wcfg  top.sv  vivado.jou
rtl/memory/: flash.txt
rtl/sim/: top_verilator.sv
rtl/sim/verilator_cmake/: .gitignore  CMakeLists.txt  settings.gtkw
rtl/sim/verilator_cmake/src/: sim_main.cpp
rtl/sim_vivado/: tb_soc.sv
rtl/soc/: soc.sv
rtl/soc/core/: core.sv  wb_master.sv  wb_master.vh
rtl/soc/peripherals/: data_memory.sv  leds.sv  program_memory.sv  systick.sv
rtl/soc/wishbone/: wb_interconnect.sv
